<resources>
    <string name="app_name">MyApp</string>

    <!--AppWidget-->
    <string name="test_button">Test Button</string>

    <!--AppWidgetConfigure-->
    <string name="create_widget">Create Widget</string>

    <!--Toolbar-->
    <string name="mika">Mika</string>
    <string name="toolbar_title">Toolbar Title</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="first_preference_category">First Preference Category</string>
    <string name="second_preference_category">Second Preference Category</string>
    <string name="check_box_preference">CheckBox Preference</string>
    <string name="list_preference">List Preference</string>
    <string name="list_preference_dialog_title">List Preference Dialog Title</string>
    <string name="list_default_value">Default value</string>
    <string name="custom_summary">Custom Summary</string>
    <string name="preference">Preference</string>
    <string name="preference_screen">Preference Screen</string>
    <string name="ringtone_preference">Ringtone Preference</string>
    <string name="preference_intent">Preference Intent</string>

    <!--Menu-->
    <string name="logout">Logout</string>

    <!--Registration-->
    <string name="activity_registration_title">Registration</string>
    <string name="first_name_hint">First Name</string>
    <string name="second_name_hint">Second Name</string>
    <string name="age_hint">Age</string>
    <string name="register_hint">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_action_label">Register</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_second_name">Invalid second name</string>
    <string name="error_invalid_age">Invalid age</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_registered">This email address is registered already</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_email">Registration Email</string>
    <string name="back_to_login">Back to Login</string>

    <!--Login-->
    <string name="activity_login_title">Login</string>
    <string name="login_hint">Login</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_failed">Login failed</string>
    <string name="login_password_action_label">Login</string>

    <!--Main-->
    <string name="activity_main_title">Main</string>

    <!--Listviews-->
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>

    <!--Practice-->
    <string name="practice_fragment">Practice Fragment</string>
    <string name="default_list">Default List</string>
    <string name="custom_list">Custom List</string>
    <string name="load_service_activity">Load Service Activity</string>
    <string name="load_notification_activity">Load Notification Activity</string>
    <string name="load_navigation_drawer_activity">Load Navigation Drawer Activity</string>
    <string name="load_custom_navigation_drawer_activity">Load Custom Navigation Drawer Activity</string>
    <string name="enter_pip_mode">Enter PIP Mode</string>
    <string name="drag_and_drop">Drag and Drop</string>
    <string name="app_widget">App Widget</string>

    <!--Service-->
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    <!--Notification-->
    <string name="create_notification">Create notification</string>
    <string name="create_progressbar_notification">Create progressbar notification</string>
    <string name="create_expanded_notification">Create expanded notification</string>
    <string name="create_custom_notification">Create Custom Notification</string>
    <string name="create_group_notification">Create Group Notification</string>
    <string name="notification_channel_name">Channel Name</string>
    <string name="notification_channel_description">Channel Description</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Navgiation Drawer-->
    <string name="drawer_header">Drawer Header</string>
    <string name="drawer_header_content">Drawer Header Content</string>
    <string name="planets">Planets</string>
    <string name="different">Different</string>
    <string name="communicate">Communicate</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">SlideShow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="good_mood">Good Mood</string>
    <string name="neutral_mood">Neutral Mood</string>
    <string name="bad_mood">Bad Mood</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
