<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/planets">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_good_mode"
                    android:icon="@drawable/ic_good_mode"
                    android:title="@string/good_mood" />
                <item
                    android:id="@+id/nav_neutral_mood"
                    android:icon="@drawable/ic_neutral_mood"
                    android:title="@string/neutral_mood" />
                <item
                    android:id="@+id/nav_bad_mood"
                    android:icon="@drawable/ic_bad_mood"
                    android:title="@string/bad_mood" />
            </group>
        </menu>
    </item>

    <item android:title="@string/different">
         <menu>
             <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/gallery" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/slideshow" />
                <item
                    android:id="@+id/nav_manage"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/tools" />
             </group>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/send" />
            </group>
        </menu>
    </item>
</menu>