<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoadServiceActivity"
        android:text="@string/load_service_activity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoadNotificationActivity"
        android:text="@string/load_notification_activity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoadNavigationDrawerActivity"
        android:text="@string/load_navigation_drawer_activity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoadCustomNavigationDrawerActivity"
        android:text="@string/load_custom_navigation_drawer_activity"/>

</LinearLayout>
